# complex_systems

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  mean_ground_height_diff.npy  mean_water_height_diff.npy  pyproject.toml  test.py  test2.py  test3.py  test4.py
data/: mean_ground_height_diff.npy  mean_water_height_diff.npy  num_streams_data.npy
src/: 3d_viewer.py  3dtest.py  CA.py  CAHistory.py  constants.py  divergence_analysis.py  divergence_exp.py  divergence_results.py  exp_erosion_rate.py  exp_flow_rate.py  exp_incr_flow_decr_eros.py  exp_incr_slope_incr_eros.py  exp_slope.py  experiment1.py  experiments.py  experiments_abs_change.py  experiments_num_streams.py  flip_flop.py  ground_wessel.py  initial_state_generation.py  interactive_test.py  lyapunov.py  main-cpp.py  main.py  paul-experiments.ipynb  profile_CA.py  slider_example.py  test.py  test_CA.py  viewer.py  visualization2d.py  wessel.py
src/cpp_modules/: GNUmakefile  fastCA.cpp
src/unused_files/: exp_erosion_rate.py  exp_flow_rate.py  exp_incr_flow_decr_eros.py  exp_incr_slope_incr_eros.py  exp_slope.py  life.py  paul-test copy.ipynb  paul-test.ipynb  test.ipynb  test.py  test2.py  test3.py  test4.py
test_systems/: output.txt
videos/: .gitignore
