[project]
name = "complex-systems"
version = "0.1.0"
description = "Cellular Automata based on river flows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pyqt6>=6.8.0",
]
