[project]
name = "complex-systems"
version = "1.0.0"
description = "Cellular Automata based on river flows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "noise>=1.2.2",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pybind11>=2.13.6",
    "pyqt6>=6.8.0",
    "tqdm>=4.67.1",
    "vtk>=9.4.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "snakeviz>=2.2.2",
    "yappi>=1.6.10",
]
